# vargas

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  alignMain.cpp  alignMain.h  alignment_8h.html  alignment_8h.js  alignment_8h_source.html  annotated.html  annotated.js  buildMain.cpp  buildMain.h  classVargas_1_1Aligner-members.html  classVargas_1_1Aligner.html  classVargas_1_1Aligner.js  classVargas_1_1Aligner_1_1AlignmentGroup-members.html  classVargas_1_1Aligner_1_1AlignmentGroup.html  classVargas_1_1Aligner_1_1AlignmentGroup.js  classVargas_1_1ByteAligner-members.html  classVargas_1_1ByteAligner.html  classVargas_1_1ByteAligner_1_1AlignmentGroup-members.html  classVargas_1_1ByteAligner_1_1AlignmentGroup.html  classVargas_1_1FASTAFile-members.html  classVargas_1_1FASTAFile.html  classVargas_1_1FASTAFile.js  classVargas_1_1GDEF-members.html  classVargas_1_1GDEF.html  classVargas_1_1GDEF.js  classVargas_1_1Graph-members.html  classVargas_1_1Graph.html  classVargas_1_1Graph.js  classVargas_1_1GraphBuilder-members.html  classVargas_1_1GraphBuilder.html  classVargas_1_1GraphBuilder.js  classVargas_1_1GraphManager-members.html  classVargas_1_1GraphManager.html  (+247 more)
doc/: Doxyfile  DoxygenLayout.xml  align.md  customdoxygen.css  define.md  doc.md  doxy-boot.js  footer.html  graph_format.json  header.html
doc/doxygen/: Doxyfile  customdoxygen.css
include/: align_main.h  alignment.h  dyn_bitset.h  fasta.h  gdef.h  graph.h  graphgen.h  graphman.h  kthread.c  kthread.h  loadfile.h  main.h  readfile.h  readsim.h  readsource.h  sam.h  samfile.h  scoring.h  sim.h  simMain.h  simd.h  threadpool.h  traceback.h  utils.h  varfile.h  vcfStream.h  vcfstream.h  xcoder.h
libb64/base64/: base64.cc
libb64/include/: encode.h
libb64/src/: cdecode.c  cencode.c
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  (+58 more)
src/: alignMain.cpp  align_main.cpp  buildMain.cpp  fasta.cpp  gdef.cpp  getopt_pp.cpp  graph.cpp  graphgen.cpp  graphman.cpp  loadfile.cpp  main.cpp  readfile.cpp  readsim.cpp  sam.cpp  samfile.cpp  scoring.cpp  sim.cpp  simMain.cpp  utils.cpp  varfile.cpp  vcfStream.cpp  vcfstream.cpp  xcoder.cpp
test/: equivilence.cpp  equivilence.h  graphTest.cpp  graphTest.h  reads  readsimTest.cpp  test.cpp  test.h  utilsTest.cpp  vcfStreamTest.cpp  x.vcf  x.vcf~  xcoderTest.cpp
test/data/: b2  b3  b4  b5  b6  b7  g2  g3  g4  g5  g6  g7  r1  r2  r4  r5  r6  reads  test_descriptions  v1  v2  v3  v4  v5  v6  v7  x.fa  x.vcf
test/googletest/googlemock/: CMakeLists.txt
test/googletest/googlemock/include/gmock/: gmock-actions.h  gmock-cardinalities.h  gmock-generated-actions.h  gmock-generated-function-mockers.h  gmock-generated-matchers.h  gmock-generated-nice-strict.h  gmock-matchers.h  gmock-more-actions.h  gmock-more-matchers.h  gmock-spec-builders.h  gmock.h
test/googletest/googlemock/include/gmock/internal/: gmock-generated-internal-utils.h  gmock-internal-utils.h
test/googletest/googlemock/include/gmock/internal/custom/: gmock-generated-actions.h.pump
test/googletest/googlemock/src/: gmock-cardinalities.cc  gmock-internal-utils.cc  gmock-matchers.cc  gmock-spec-builders.cc  gmock.cc  gmock_main.cc
test/googletest/googlemock/test/: gmock-actions_test.cc  gmock-cardinalities_test.cc  gmock-generated-actions_test.cc  gmock-generated-function-mockers_test.cc  gmock-generated-internal-utils_test.cc  gmock-generated-matchers_test.cc  gmock-internal-utils_test.cc  gmock-matchers_test.cc  gmock-more-actions_test.cc  gmock-nice-strict_test.cc  gmock-port_test.cc  gmock-spec-builders_test.cc  gmock_ex_test.cc  gmock_leak_test_.cc  gmock_link_test.h  gmock_output_test_.cc  gmock_stress_test.cc  gmock_test.cc
test/googletest/googletest/: CMakeLists.txt
test/googletest/googletest/cmake/: internal_utils.cmake
test/googletest/googletest/src/: gtest-all.cc
